# Spel

./: .clang-tidy  .gitignore  .gitmodules  meson.build  meson_options.txt  spel_internal_2d.glsl  test.cpp  test.glsl
.github/workflows/: ci.yml
build-aux/: build_info.in.h  build_info_vcs.in.h
sandbox/: main.c
shaders/: spel_internal_2d.glsl  spel_internal_blit.glsl  spel_internal_canvas.glsl  spel_internal_fullscreen.glsl  spel_internal_imgui.glsl  spel_internal_text.glsl
spel/core/: entry.h  env_info.h  event.h  log.h  macros.h  memory.h  panic.h  types.h  window.h
spel/extras/: spel_imgui.h
spel/gfx/: gfx.h  gfx_buffer.h  gfx_canvas.h  gfx_cmdlist.h  gfx_commands.h  gfx_context.h  gfx_framebuffer.h  gfx_internal.h  gfx_internal_shaders.h  gfx_pipeline.h  gfx_rg.h  gfx_shader.h  gfx_texture.h  gfx_types.h  gfx_uniform.h  gl.h
spel/gfx/canvas/: canvas.h  canvas_internal.h  canvas_internal_fonts.h  canvas_path.h  canvas_types.h
spel/input/: input.h  input_action.h  input_gamepad.h  input_internal.h  input_keyboard.h  input_mouse.h  input_platform.h
spel/utils/: build_info.h  display.h  math.h  path.h  terminal.h  time.h  uthash.h
spel/utils/internal/: execinfo.h  spirv.h  spirv_reflect.h  stacktraverse.h  stb_image.h
src/core/: build_info.c  entry.c  env_info.c  event.c  log.c  memory.c  panic.c  window.c
src/extras/: spel_imgui.c
src/gfx/: gfx.c  gfx_canvas.c  gfx_gl.c  gfx_pipeline.c  gfx_rg.c  gfx_shader_reflect.c
src/gfx/backends/gl/: gfx_buffer_gl.c  gfx_cmdlist_gl.c  gfx_context_cmdlist_gl.c  gfx_context_gl.c  gfx_framebuffer_gl.c  gfx_pipeline_gl.c  gfx_shader_gl.c  gfx_texture_gl.c  gfx_vtable_gl.c  gfx_vtable_gl.h  gl.h  gl_types.h
src/gfx/canvas/: canvas_font.c  canvas_internal_fonts.c  canvas_path.c
src/input/: input.c
src/utils/: build_info.c  display.c  math.c  path.c  terminal.c  time.c
src/utils/internal/: execinfo.c  execinfo.h  spirv_reflect.c  stacktraverse.c  xxh_x86dispatch.c  xxhash.c
src/utils/internal/libtess2/: bucketalloc.c  bucketalloc.h  dict.c  dict.h  mesh.h  priorityq.c  priorityq.h  tess.c  tess.h
subprojects/imgui/: meson.build
subprojects/imgui/imgui/: dcimgui_internal.h
subprojects/imgui/src/: dcimgui.cpp  dcimgui_internal.cpp  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
tools/: fontgen.h  fontview.cpp  git-commit.sh  sh2spv.cpp  spv2h.cpp  stacktraverse.py  stb_image_write.h  str2fnv.c  ttf2png.cpp
tools/fontgen/: fontgen.cpp  fontgen_bmfont.cpp  fontgen_grid.cpp
